feat(extension): from the ground up rework (#29)
* removed all code to reimplement wij the cli application

* feat: inital terminal implementation

* feat: environment awaire terminals

* feat: module commands

* feat: allot of work

* added premake terminal CLI

* feat: premakeTerminal, command groups

* feat: command manager

* feat: allot of things: command manager, resources

* feat: config commands

* feat: added platform CLI per platform

* fix: updated win cli version to latest

* feat: added premake5 terminal

* fix: updated package.json

* fix: premake5 CLI terminal quick button

* feat: added keybindings

* fix: updated premake binaries

* fix(terminal): added statusbar items + removed terminal hijacking

---------

Co-authored-by: Beernaert Robbe <robbe.beernaert@student.howest.be>

--- a/package.json
+++ b/package.json
@@ -32,7 +32,11 @@
       "profiles": [
         {
           "id": "premake5.terminal-profile",
-          "title": "premake5"
+          "title": "Premake Manager"
+        },
+        {
+          "id": "premake5.environment-profile",
+          "title": "Premake5"
         }
       ]
     },
@@ -47,178 +51,119 @@
       }
     ],
     "taskDefinitions": [
-      {
-        "type": "premake5",
-        "required": [
-            "action"
-        ],
-        "properties": {
-          "action": {
-            "type": "string",
-            "description": "The action you would like premake5 to run."
-          }
-        }
-      }
     ],
-    "viewsWelcome": [
-      {
-        "view": "workspacesList",
-        "contents": "no premake5 workspace was found, you can open a folder containing a premake5 workspace or create a new workspace.\n[Open Folder](command:vscode.openFolder)\n[Create Workspace](command:premake.workspace.create)\n To learn more about premake and how to use it [Read The Docs](https://premake.github.io/docs/)."
-      }
-    ],
-    "viewsContainers": {
-      "activitybar": [
-        {
-          "id": "workspaces", 
-          "title": "Workspaces", 
-          "icon": "resources/media/premake-logo-simple.png" 
-        } 
-      ] 
-    }, 
-    "views": {
-      "workspaces": [
-        {
-          "id": "workspacesList",
-          "name": "Workspaces List" 
-        } 
-      ] 
-    },
+    
+    
     
     "commands": [
       {
-        "category": "Premake",
-        "command": "premake.action.run",
-        "title": "run premake action",
+        "category": "Premake5",
+        "command": "premake5.manager-cli",
+        "title": "Open Premake5 Manager CLI Terminal"
+      },
+      {
+        "category": "Premake5",
+        "command": "premake5.version-set",
+        "title": "Set the active premake5 version ",
+        "when": "false"
+      },
+      {
+        "category": "Premake5",
+        "command": "premake5.version-list-installed",
+        "title": "List all the installed premake version",
+        "when": "false"
+      },
+      {
+        "category": "Premake5 version",
+        "command": "premake5.version-list-releases",
+        "title": "List alle the available releases",
+        "when": "false"
+      },
+      {
+        "category": "premake manager",
+        "command": "premake5.version-group",
+        "title": "version commands",
         "icon": "resources/media/premake-logo-128.png"
       },
       {
-        "category": "Premake",
-        "command": "premake.action.default.set",
-        "title": "set default premake action",
-        "icon": "resources/media/premake-logo-128.png"
-      },
-      {
-        "category": "Premake",
-        "command": "premake.action.default.run",
-        "title": "run default premake action",
-        "icon": "resources/media/premake-logo-128.png"
-      },
-      {
-        "category": "Premake",
-        "command": "premake.setversion",
-        "title": "set premake version",
-        "icon": "resources/media/premake-logo-128.png"
-      },
-      {
-        "category": "Premake",
-        "command": "premake.cleanup",
-        "title": "cleanup the premake folder",
+        "category": "Premake5",
+        "command": "premake5.module-info",
+        "title": "return the info from a premake module",
         "icon": "resources/media/premake-logo-128.png",
-        "shortTitle": "clean"
+        "when": "false"
       },
       {
-        "command": "extension.editProjectItem", 
-        "title": "Edit Project Item", 
-        "category": "Project",
+        "category": "Premake5",
+        "command": "premake5.module-info",
+        "title": "return the info from a premake module",
         "icon": "resources/media/premake-logo-128.png",
-        "shortTitle": "edit project"
+        "when": "false"
       },
       {
-        "command": "premake.workspace.refresh",
-        "title": "refresh workspace viewer",
-        "icon": "resources/media/refresh.svg",
-        "shortTitle": "refresh"
-        
-      },
-      {
-        "category": "Premake",
-        "command": "premake.workspace.create",
-        "title": "create a new workspace",
+        "category": "Premake5",
+        "command": "premake5.module-install",
+        "title": "install a premake module",
         "icon": "resources/media/premake-logo-128.png",
-        "shortTitle": "create workspace"
+        "when": "false"
       },
       {
-        "category": "Premake",
-        "command": "premake.project.create",
-        "title": "create a new project",
-        "icon": "resources/media/premake-logo-128.png"
+        "category": "Premake5",
+        "command": "premake5.module-remove",
+        "title": "remove a premake module",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
       },
       {
-        "category": "Premake",
-        "command": "premake.terminal.new",
-        "title": "launch a new premake5 terminal",
-        "shortTitle": "terminal new"
+        "category": "premake manager",
+        "command": "premake5.module-group",
+        "title": "module commands",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
       },
       {
-        "category": "Premake",
-        "command": "premake.terminal.get",
-        "title": "get a new/existing premake5 terminalwhen possible",
-        "shortTitle": "terminal get"
+        "category": "premake manager",
+        "command": "premake5.config-group",
+        "title": "config commands",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
+      {
+        "category": "Premake5",
+        "command": "premake5.manager",
+        "icon": "resources/media/premake-logo-128.png",
+        "title": "manager"
+      },
+      {
+        "category": "Premake5",
+        "command": "premake5.environment-cli",
+        "icon": "resources/media/premake-logo-128.png",
+        "title": "environment terminal"
       }
+
     ],
     "keybindings": [
       {
-        "command": "premake.setversion",
-        "key": "ctrl+alt+v"
+        "command": "premake5.manager-cli",
+        "key": "ctrl+alt+p",
+        "when": "terminalFocus == false"
       },
       {
-        "command": "premake.terminal.new",
+        "command": "premake5.manager",
         "key": "ctrl+alt+m"
       },
       {
-        "command": "premake.action.default.set",
-        "key": "ctrl+alt+a"
-      },
-      {
-        "command": "premake.action.default.run",
-        "key": "ctrl+alt+b"
-      },
-      {
-        "command": "premake.cleanup",
-        "key": "ctrl+alt+c"
-      },
-      {
-        "command": "premake.terminal.get",
-        "key": "ctrl+alt+p"
+        "command": "premake5.environment-cli",
+        "key": "ctrl+alt+t",
+        "when": "terminalFocus == false"
       }
     ],
     "menus": { 
-      "view/item/context": [
-        {
-          "command": "extension.editProjectItem",
-          "when": "viewItem == projectItemView",
-          "group": "inline"
-        }
-      ],
-      "view/title": [
-        {
-          "command": "premake.workspace.refresh",
-          "when": "view == workspacesList",
-          "group": "navigation"
-        }
-      ]
+     
     },
     "configuration": {
       "type": "object",
       "properties": {
-        "premake.version": {
-          "type": "string",
-          "description": "Choose the version of Premake to use for this project."
-        },
-        "premake.repository": {
-          "type": "string",
-          "default": "https://github.com/premake/premake-core",
-          "description": "the url from wich to get the premake versions from."
-        },
-        "premake.action": {
-          "type": "string",
-          "description": "the default action to run"
-        },
-        "premake.workspace.autoload": {
-          "type": "boolean",
-          "default": true,
-          "description": "Automatically load the Premake workspace/ premake5.lua on startup."
-        }
+        
       }
     }
   },
@@ -235,20 +180,19 @@
     "icons": "fantasticon ./src/resources/media/ -o ./src/resources/media/"
   },
   "dependencies": {
-    "@octokit/rest": "^21.0.2",
     "@types/vscode": "^1.96.0",
-    "adm-zip": "^0.5.16",
     "axios": "^1.7.9",
     "chokidar": "^4.0.3",
     "cp": "^0.2.0",
-    "luaparse": "^0.3.1",
     "tar": "^7.4.3"
   },
+  "files": [
+    "out",
+    "resources"
+  ],
   "devDependencies": {
     "@octokit/types": "^13.6.2",
     "@types/adm-zip": "^0.5.7",
-    "@types/lua-json": "^1.0.3",
-    "@types/luaparse": "^0.2.12",
     "@types/mocha": "^10.0.9",
     "@types/node": "^20.9.0",
     "@types/vscode": "^1.92.1",
