feat: initial modules commands

--- a/package.json
+++ b/package.json
@@ -106,13 +106,6 @@
       },
       {
         "category": "Premake5",
-        "command": "premake5.module-info",
-        "title": "return the info from a premake module",
-        "icon": "resources/media/premake-logo-128.png",
-        "when": "false"
-      },
-      {
-        "category": "Premake5",
         "command": "premake5.module-install",
         "title": "install a premake module",
         "icon": "resources/media/premake-logo-128.png",
@@ -132,10 +125,53 @@
         "icon": "resources/media/premake-logo-128.png",
         "when": "false"
       },
+
+       {
+        "category": "Premake5",
+        "command": "premake5.library-info",
+        "title": "return the info from a premake library",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
+      {
+        "category": "Premake5",
+        "command": "premake5.library-install",
+        "title": "install a premake library",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
+      {
+        "category": "Premake5",
+        "command": "premake5.library-remove",
+        "title": "remove a premake library",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
+      {
+        "category": "premake manager",
+        "command": "premake5.library-group",
+        "title": "library commands",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
       {
         "category": "premake manager",
         "command": "premake5.config-group",
         "title": "config commands",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
+      {
+        "category": "premake manager",
+        "command": "premake5.config-view",
+        "title": "view config",
+        "icon": "resources/media/premake-logo-128.png",
+        "when": "false"
+      },
+      {
+        "category": "premake manager",
+        "command": "premake5.configure",
+        "title": "configure",
         "icon": "resources/media/premake-logo-128.png",
         "when": "false"
       },
