--- a/package.json
+++ b/package.json
@@ -128,8 +128,7 @@
         "icon": "resources/media/premake-logo-128.png",
         "when": "false"
       },
-
-       {
+      {
         "category": "Premake5",
         "command": "premake5.library-info",
         "title": "return the info from a premake library",
@@ -207,10 +206,30 @@
         "when": "terminalFocus == false"
       }
     ],
-    "menus": {},
+    "viewsContainers": {
+      "activitybar": [
+        {
+          "id": "premake5-manager",
+          "title": "Premake Manager",
+          "icon": "resources/media/premake-logo.svg"
+        }
+      ]
+    },
+    "views": {
+      "premake5-manager": [
+        {
+          "type": "webview",
+          "id": "premake5.manager.module",
+          "name": "Modules"
+        }
+      ]
+    },
     "configuration": {
       "type": "object",
       "properties": {}
+    },
+    "menus": {
+      
     }
   },
   "scripts": {
@@ -227,7 +246,7 @@
     "meta": "node docs/metagen.mjs"
   },
   "dependencies": {
-    "@types/vscode": "^1.96.0",
+    "@vscode/codicons": "^0.0.44",
     "axios": "^1.7.9",
     "chokidar": "^4.0.3",
     "cp": "^0.2.0",
@@ -238,7 +257,8 @@
     "@types/adm-zip": "^0.5.7",
     "@types/mocha": "^10.0.9",
     "@types/node": "^20.9.0",
-    "@types/vscode": "^1.92.1",
+    "@types/vscode": "^1.96.0",
+    "@types/vscode-webview": "^1.57.5",
     "@typescript-eslint/eslint-plugin": "^8.10.0",
     "@typescript-eslint/parser": "^8.7.0",
     "@vscode/test-cli": "^0.0.10",
