feat: hooked up details panel

--- a/package.json
+++ b/package.json
@@ -213,6 +213,9 @@
           "title": "Premake Manager",
           "icon": "resources/media/premake-logo.svg"
         }
+      ],
+      "panel": [
+
       ]
     },
     "views": {
