--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,18 @@
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
       "outFiles": ["${workspaceFolder}/out/extension.js"],
       "preLaunchTask": "${defaultBuildTask}"
+    },
+    {
+    "name": "Debug Modules Webview (Chrome)",
+    "type": "chrome",
+    "request": "launch",
+    "url": "https://localhost:5173",
+    "webRoot": "${workspaceFolder}/src/registry/media/modules",
+    "preLaunchTask": "npm: dev:modules", // This ensures npm runs first
+    "presentation": {
+      "group": "UI",
+      "order": 1
     }
+  }
   ]
 }
