Feat: registry (API+UI) (#41)
* feat: filters

* feat: we got modules showing

* fix: updated public registry url

* feat: added details screen

* feat: hooked up details panel

* fix:  updated and paginated api

* feat: detailspanel (react), modules search bar(react)

* feat: library side panel

* feat: add build integration for the media panels and added them to the extension

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,6 +12,30 @@
       "args": ["--extensionDevelopmentPath=${workspaceFolder}"],
       "outFiles": ["${workspaceFolder}/out/extension.js"],
       "preLaunchTask": "${defaultBuildTask}"
+    },
+    {
+      "name": "Debug Modules Webview (Chrome)",
+      "type": "chrome",
+      "request": "launch",
+      "url": "https://localhost:5173",
+      "webRoot": "${workspaceFolder}/src/registry/media/modules",
+      "preLaunchTask": "npm: dev:modules", // This ensures npm runs first
+      "presentation": {
+        "group": "UI",
+        "order": 1
+      }
+    },
+    {
+      "name": "Debug Libraries Webview (Chrome)",
+      "type": "chrome",
+      "request": "launch",
+      "url": "https://localhost:5173",
+      "webRoot": "${workspaceFolder}/src/registry/media/libraries",
+      "preLaunchTask": "npm: dev:libraries", // This ensures npm runs first
+      "presentation": {
+        "group": "UI",
+        "order": 1
+      }
     }
   ]
 }
