--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "premake-manager",
   "displayName": "premake manager",
   "description": "a extension to manage premake projects",
-  "version": "0.1.4-dev",
+  "version": "0.1.4",
   "type": "commonjs",
   "publisher": "lolrobbe2",
   "engines": {
