--- a/.github/workflows/build-pre-release-package.yml
+++ b/.github/workflows/build-pre-release-package.yml
@@ -31,7 +31,9 @@ jobs:
         uses: actions/cache@v4
         id: node-cache
         with:
-          path: node_modules
+          path: |
+            node_modules
+            **/node_modules
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: |
             ${{ runner.os }}-node-
