--- a/package.json
+++ b/package.json
@@ -266,14 +266,14 @@
     "resources": "cp -rv ./src/resources/** ./out/resources",
     "icons": "fantasticon ./src/resources/media/ -o ./src/resources/media/",
     "meta": "node docs/metagen.mjs",
-    "setup-details": "npm install --prefix src/registry/media/details",
-    "setup-modules": "npm install --prefix src/registry/media/modules",
-    "setup-libraries": "npm install --prefix src/registry/media/libraries",
-    "setup-views": "npm run setup-details & npm run setup-modules & npm run setup-libraries & wait",
+    "setup-details": "cd src/registry/media/details && npm ci",
+    "setup-modules": "cd src/registry/media/modules && npm ci",
+    "setup-libraries": "cd src/registry/media/libraries && npm ci",
+    "setup-views": "npm run setup-details && npm run setup-modules && npm run setup-libraries",
     "build-details": "npm run build --prefix src/registry/media/details",
     "build-modules": "npm run build --prefix src/registry/media/modules",
     "build-libraries": "npm run build --prefix src/registry/media/libraries",
-    "build-views": "npm run build-details & npm run build-modules & npm run build-libraries & wait",
+    "build-views": "npm run build-details && npm run build-modules && npm run build-libraries",
     "postinstall": "npm run setup-views"
   },
   "dependencies": {
