fix: ignore scripts

--- a/package.json
+++ b/package.json
@@ -266,9 +266,9 @@
     "resources": "cp -rv ./src/resources/** ./out/resources",
     "icons": "fantasticon ./src/resources/media/ -o ./src/resources/media/",
     "meta": "node docs/metagen.mjs",
-    "setup-details": "cd src/registry/media/details && npm install",
-    "setup-modules": "cd src/registry/media/modules && npm install",
-    "setup-libraries": "cd src/registry/media/libraries && npm install",
+    "setup-details": "cd src/registry/media/details && npm install --ignore-scripts",
+    "setup-modules": "cd src/registry/media/modules && npm install --ignore-scripts",
+    "setup-libraries": "cd src/registry/media/libraries && npm install --ignore-scripts",
     "setup-views": "npm run setup-details && npm run setup-modules && npm run setup-libraries",
     "build-details": "npm run build --prefix src/registry/media/details",
     "build-modules": "npm run build --prefix src/registry/media/modules",
