--- a/.github/workflows/build-pre-release-package.yml
+++ b/.github/workflows/build-pre-release-package.yml
@@ -42,10 +42,26 @@ jobs:
         if: steps.node-cache.outputs.cache-hit != 'true'
         run: npm install  # This triggers 'postinstall' which runs 'setup-views'
 
-      # 4. Run your tests
+      - name: Determine Release Type
+        id: release_type
+        run: |
+          # Default to pre-release
+          RELEASE_FLAG="--pre-release"
+          
+          # If triggered by a tag OR manual 'is_stable' input, make it a stable release
+          if [[ "${{ github.ref_type }}" == "tag" ]] || [[ "${{ github.event.inputs.is_stable }}" == "true" ]]; then
+            RELEASE_FLAG=""
+            echo "Publishing STABLE release"
+            echo "IS_PRE_RELEASE=false" >> $GITHUB_ENV
+          else
+            echo "Publishing PRE-RELEASE"
+            echo "IS_PRE_RELEASE=true" >> $GITHUB_ENV
+          fi
+          
+          echo "RELEASE_FLAG=$RELEASE_FLAG" >> $GITHUB_ENV
       - name: Package extension
         run: |
-          npx @vscode/vsce package --pre-release
+          npx @vscode/vsce package ${{ env.RELEASE_FLAG }}
           TEMP_VSIX=$(ls *.vsix)
           echo "VSIX_PATH=$TEMP_VSIX" >> $GITHUB_ENV
           echo "vsix_name=$TEMP_VSIX" >> $GITHUB_OUTPUT
@@ -64,5 +80,5 @@ jobs:
           pat: ${{ secrets.MARKET_PLACE_TOKEN }}
           registryUrl: https://marketplace.visualstudio.com
           extensionFile: ${{ env.VSIX_PATH }}  # Point it to your existing file
-          preRelease: true
+          preRelease: ${{ env.IS_PRE_RELEASE }}
           skipDuplicate: true
